fixed spring security bugs; added thymeleaf layouts; refactoring