@@ -1,35 +1,46 @@
 package com.example.Library.controller;
 
+import com.example.Library.domain.Role;
 import com.example.Library.domain.User;
 import com.example.Library.repository.UserRepository;
+import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 
 import java.util.Map;
+import java.util.Set;
 
+@Controller
 public class RegistrationController {
     private final UserRepository userRepository;
+    private final PasswordEncoder passwordEncoder;
 
-    public RegistrationController(UserRepository userRepository) {
+    public RegistrationController(UserRepository userRepository, PasswordEncoder passwordEncoder) {
         this.userRepository = userRepository;
+        this.passwordEncoder = passwordEncoder;
     }
 
-    @GetMapping ("/registration")
-    public String registration(){
+    @GetMapping("/registration")
+    public String registration() {
         return "registration";
     }
+
+
     @PostMapping("/registration")
-    public String addUser(User user , Map<String, Object> model){
-       User userFromDb =  userRepository.findByUsername(user.getUsername());
-       //проверка в базе на наличие пользователя
-       if(userFromDb != null){
-           model.put("message" , "User exist!");
-           return "regostration";
-       }
-       user.setActive(true);
-       //user.setRoles(Collections.singleton()); //создает сет с единственным значением
+    public String addUser(User user, Map<String, Object> model) {
+        User userFromDb = userRepository.findByUsername(user.getUsername());
+        //проверка в базе на наличие пользователя
+        if (userFromDb != null) {
+            model.put("message", "User exist!");
+            return "registration";
+        }
+
+        user.setActive(true);
+        user.setRoles(Set.of(Role.USER));
+        user.setPassword(passwordEncoder.encode(user.getPassword()));
         userRepository.save(user);
-        return "/redirect:loginpage";
+        return "redirect:login";
     }
 
 }
